# trading-exchange

./: CMakeLists.txt  Optimization.md  README.md
src/: MarketDataEvent.hpp  MarketDataPublisher.hpp  MatchingEngine.cpp  MatchingEngine.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  OrderGateway.hpp  OutputPolicy.hpp  SymbolMap.hpp  UDPTransmitter.hpp  main.cpp
src/client/: MarketDataFeedHandler.cpp
src/exchange/: MarketDataPublisher.hpp  MatchingEngine.hpp  OrderBook.hpp  OrderGateway.hpp  TradingExchange.cpp  UDPTransmitter.hpp
src/types/: ItchMessage.hpp  MarketDataEvent.hpp  Order.hpp  SymbolMap.hpp
src/utils/: LatencyStats.hpp  ObjectPool.hpp  SPSCQueue.hpp  Threading.hpp  Timer.hpp
tests/: EndToEndTest.cpp  MatchingBenchmark.cpp  MatchingTest.cpp
